feat(Auth): keycloak backend slice
